--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,6 +1,6 @@
 michael:
   name: Michael Example
-  email: michael@example.com
+  email: example@
   password_digest: <%= User.digest('password') %>
   admin: true
   activated: true
@@ -27,7 +27,7 @@ malory:
   activated: true
   activated_at: <%= Time.zone.now %>
 
-<% 30.times do |n| %>
+  <% 30.times do |n| %>
 user_<%= n %>:
   name: <%= "User #{n}" %>
   email: <%= "user-#{n}@example.com" %>
